--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="col-lg-4 col-sm-6">
 
                     <a class="portfolio-box" href="projet1.html" title="Project Name">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                        <img class="img-fluid" src="\assets\img\projet_android_new.png" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Maintenance</div>
                             <div class="project-name">Projet android</div>
