started working on the second project page
still have to add part of the research (for saving data)

--- a/projet1.html
+++ b/projet1.html
@@ -72,6 +72,7 @@
                     De plus en utilisant un moteur spécialisé les modifications futures que je pourrait vouloir apporter au jeu serait plus simplement implémenté.
                     </p>
                     <br>
+                    <h2 class="text-center mt-0">Veille technologique</h2>
                     <p class="text-muted mb-0">
                         Pour la réalisation de cette maintenance j'avais plusieurs choix de moteur de jeu, que ce soit Unity, Unreal Engine ou Godot, j'ai décidé d'écarter Unreal Engine 
                         puisqu'il est trop complexe et puissant pour le projet que je souhaite réaliser, de plus il est principalement orienté 3D.
