added photo and talked about sharedPrefs

--- a/projet2.html
+++ b/projet2.html
@@ -81,7 +81,7 @@
                                 marker.setIcon(BitmapDescriptorFactory.defaultMarker(BitmapDescriptorFactory.HUE_GREEN));
                             </code>
                           </pre>
-                    </p>
+                          <p class="text-muted mb-0"> Il existe différentes manières de stocker des données, telle que les sharedPrefs, permettant de stocker quelque données directement sur le téléphone de l'utilsateur à l'aide d'un couple clé valeur
             </div>
         </section>
        
@@ -92,18 +92,17 @@
                     <div class="row g-0">
                         <div class="col-lg-4 col-sm-6">
 
-                                <img class="img-fluid" src="/assets/img/projet_android.jpeg" alt="..." />
+                                <img class="img-fluid" src="/assets/img/projet_tut.png" alt="carte présentant deux marqueur rouge, qui n'ont pas été visité" />
                                 <div class="portfolio-box-caption">
-                                    <div class="project-category text-white-50">Projet avant la maintenance</div>
+                                    <div class="project-category text-white-50">Aucun point n'a été visité</div>
                                 </div>
-        
                             </a>
                         </div>
                         <div class="col-lg-4 col-sm-6"></div>
                         <div class="col-lg-4 col-sm-6">
-                                <img class="img-fluid" src="\assets\img\projet_android_new.png" alt="..." />
+                                <img class="img-fluid" src="\assets\img/projet_tut2.png" alt="carte présentant un marqueur vert, qui a été visité, et un marqueur rouge" />
                                 <div class="portfolio-box-caption">
-                                    <div class="project-category text-white-50">Projet après la maintenance</div>
+                                    <div class="project-category text-white-50">Un point a été visité</div>
                                 </div>
                             </a>
             </div>
