--- a/projet1.html
+++ b/projet1.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#about">Présentation</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Objectif de la maintenance</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Objectif de la maintenance et veille technologique</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Résultat</a></li>
                     </ul>
                 </div>
