added image and link to sencond project in main page
forgot about it before

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="projet2.html" title="Project Name">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                        <img class="img-fluid" src="assets/img/projet_tut_hor.png" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Maintenance</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">Application découverte IUT</div>
                         </div>
                     </a>
                 </div>
