--- a/projet3.html
+++ b/projet3.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>Maintenance jeu projet spécialisé</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#about">Présentation</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Objectif de la maintenance</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Objectif de la maintenance et veille technologique</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Résultat</a></li>
                     </ul>
                 </div>
@@ -42,8 +42,8 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Jeu android développé en Java</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                        <p class="text-white-75 mb-5">Jeu développé avec godot</p>
+                        <a class="btn btn-primary btn-xl" href="#about">Présentation</a>
                     </div>
                 </div>
             </div>
@@ -55,8 +55,9 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">présentation</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4"> présentation blabla </p>
-                        <a class="btn btn-light btn-xl" href="#services">blabla !</a>
+                        <p class="text-white-75 mb-4"> Lors de mon semestre au cégep de Matane j'ai pu réaliser comme projet un jeu en utilisant godot. 
+                            Ce jeu de type rpg propose d'explorer différentes îles peuplé de monstres et de trésors.</p>
+                        <a class="btn btn-light btn-xl" href="#services">GitHub</a>
                     </div>
                 </div>
             </div>
