added LinkedIn icon

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <hr class="divider" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 mb-5">Développeur logiciel, d'application android et de base de donnée</p>
+                    <p class="text-white-75 mb-5">Développeur de logiciel, d'application android et de base de données</p>
                 </div>
             </div>
         </div>
@@ -57,11 +57,11 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="text-white mt-0">étudiant en informatique</h2>
+                    <h2 class="text-white mt-0">Étudiant en informatique, IUT de Laval - France et Cégep de matane - Québec</h2>
                     <hr class="divider divider-light" />
-                    <p class="text-white-75 mb-4"> Formé à de nombreuses techniques tel que le développement
-                        d'application et programme java, la création et la gestion de base de données ou encore les
-                        méthodes agiles et la programmation orienté objet. </p>
+                    <p class="text-white-75 mb-4"> Je suis formé à de nombreuses techniques telles que le développement
+                        d'application et de programme java, la création et la gestion de base de données ou encore les
+                        méthodes agiles et la programmation orientée objet. </p>
                     <a class="btn btn-light btn-xl" href="#services">Mes compétences !</a>
                 </div>
             </div>
@@ -79,8 +79,8 @@
                         <h3 class="h4 mb-2">Programmation Java</h3>
                         <p class="text-muted mb-0">
                             J'ai pu développer de nombreux programmes et logiciel durant mes études, j'ai par exemple
-                            codé une application de compréhension orale d'anglais en utilisant javaFx, j'ai aussi
-                            développer une application mobile android avec Android studio.
+                            codé une application de compréhension orale anglais/français en utilisant javaFx.
+                        J'ai aussi développé une application android avec Android studio.
                         </p>
                     </div>
                 </div>
@@ -98,8 +98,8 @@
                         <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">Programmation PHP</h3>
                         <p class="text-muted mb-0">
-                            Je maitrise le développement de site utilisant le PHP afin de créer des pages web dynamique
-                            et en lien avec une base de donnée
+                            Je maitrise le développement de site utilisant le PHP afin de créer des pages web dynamiques
+                            et en lien avec une base de données
                         </p>
                     </div>
                 </div>
@@ -107,8 +107,8 @@
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">Godot</h3>
-                        <p class="text-muted mb-0">J'ai de l'expérience avec le moteur de jeu godot, j'ai pu ainsi
-                            développer un jeu dessus durant mon semestre au cégep de Matane.</p>
+                        <p class="text-muted mb-0">Je me suis formé au moteur de jeu Godot. 
+                            j'ai notamment développé un jeu dessus durant mon semestre au cégep de Matane.</p>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Maintenance</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">Jeu godot</div>
                         </div>
                     </a>
                 </div>
@@ -160,7 +160,7 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8 col-xl-6 text-center">
-                    <h2 class="mt-0">Contactez moi!</h2>
+                    <h2 class="mt-0">Contactez moi !</h2>
                     <hr class="divider" />
                     <p class="text-muted mb-5">Mon profil vous intéresse ? vous souhaitez avoir plus d'informations ?
                         vous pouvez me contacter dès maintenant</p>
@@ -169,8 +169,10 @@
 
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-4 text-center mb-5 mb-lg-0">
-                    <i class="bi-phone fs-2 mb-3 text-muted"></i>
-                    <div>+33 695949012</div>
+                    <!--<i class="bi-phone fs-2 mb-3 text-muted"></i>
+                    <div>+33 695949012</div>-->
+                    
+                    <a href="https://www.linkedin.com/in/sacha-bellier-toulouzou/"><img src="/assets/img/linkedin.svg"></img></a>
                     <div>sbelliertoulouzou@gmail.com</div>
                 </div>
             </div>
