another small update

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#about">Présentation</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Projets</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Compétences et maintenance</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">compétences</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contactez moi</a></li>
                 </ul>
             </div>
         </div>
@@ -47,7 +47,7 @@
                     <hr class="divider" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 mb-5">Développeur de logiciel, d'application android et de base de données</p>
+                    <p class="text-white-75 mb-5">Développeur de logiciels, d'applications android et de bases de données</p>
                 </div>
             </div>
         </div>
@@ -57,10 +57,12 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="text-white mt-0">Étudiant en informatique, IUT de Laval - France et Cégep de matane - Québec</h2>
+                    <h2 class="text-white mt-0">Étudiant en informatique</h2>
+                    <p class="text-white-75 mb-4">IUT de Laval - France</p>
+                    <p class="text-white-75 mb-4">Cégep de matane - Québec</p>
                     <hr class="divider divider-light" />
                     <p class="text-white-75 mb-4"> Je suis formé à de nombreuses techniques telles que le développement
-                        d'application et de programme java, la création et la gestion de base de données ou encore les
+                        d'applications et de programmes java, la création et la gestion de bases de données ou encore les
                         méthodes agiles et la programmation orientée objet. </p>
                     <a class="btn btn-light btn-xl" href="#services">Mes compétences !</a>
                 </div>
@@ -78,9 +80,9 @@
                         <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">Programmation Java</h3>
                         <p class="text-muted mb-0">
-                            J'ai pu développer de nombreux programmes et logiciel durant mes études, j'ai par exemple
+                            J'ai pu développer de nombreux programmes et logiciels durant mes études, j'ai par exemple
                             codé une application de compréhension orale anglais/français en utilisant javaFx.
-                        J'ai aussi développé une application android avec Android studio.
+                            J'ai aussi développé une application avec Android studio.
                         </p>
                     </div>
                 </div>
@@ -89,7 +91,7 @@
                         <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">Programmation SQL</h3>
                         <p class="text-muted mb-0">
-                            Je maitrise le développement et la gestion de base de données SQL et PL/SQL.
+                            Je maitrise le développement et la gestion de bases de données SQL et PL/SQL.
                         </p>
                     </div>
                 </div>
@@ -98,7 +100,7 @@
                         <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">Programmation PHP</h3>
                         <p class="text-muted mb-0">
-                            Je maitrise le développement de site utilisant le PHP afin de créer des pages web dynamiques
+                            Je maitrise le développement de sites utilisant le PHP afin de créer des pages web dynamiques
                             et en lien avec une base de données
                         </p>
                     </div>
@@ -108,7 +110,7 @@
                         <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">Godot</h3>
                         <p class="text-muted mb-0">Je me suis formé au moteur de jeu Godot. 
-                            j'ai notamment développé un jeu dessus durant mon semestre au cégep de Matane.</p>
+                            J'ai notamment développé un jeu en utilisant ce moteur durant mon semestre au cégep de Matane.</p>
                     </div>
                 </div>
             </div>
