ajout de la veille technologique

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">Godot</h3>
                         <p class="text-muted mb-0">Je me suis formé au moteur de jeu Godot. 
-                            J'ai notamment développé un jeu en utilisant ce moteur durant mon semestre au cégep de Matane.</p>
+                            J'ai notamment développé un jeu en utilisant ce moteur durant mon semestre au Cégep de Matane.</p>
                     </div>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="projet3.html" title="Project Name">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
+                        <img class="img-fluid" src="assets/img/ocean.png" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Maintenance</div>
                             <div class="project-name">Jeu godot</div>
