--- a/projet3.html
+++ b/projet3.html
@@ -57,7 +57,7 @@
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">Lors de mon semestre au cégep de Matane j'ai pu réaliser comme projet un jeu en utilisant godot. 
                             Ce jeu de type rpg propose d'explorer différentes îles peuplé de monstres et de trésors.</p>
-                            <a href="https://github.com/sachabt/maintenance-projet-android" class="text-white-75 mb-4" >GitHub</a>
+                            <a href="https://github.com/cegepmatane/projet-specialise-2022-sachabt" class="text-white-75 mb-4" >GitHub</a>
                     </div>
                 </div>
             </div>
@@ -104,19 +104,10 @@
                     <div class="row g-0">
                         <div class="col-lg-4 col-sm-6">
 
-                                <img class="img-fluid" src="/assets/img/projet_tut.png" alt="carte présentant deux marqueur rouge, qui n'ont pas été visité" />
+                                <img class="img-fluid" src="/assets/img/esquive.gif" alt="le joueur se déplace puis commence une esquive, devenant semi transparent  et un effet de particule se présentatn autour de lui" />
                                 <div class="portfolio-box-caption">
-                                    <div class="project-category text-white-50">Aucun point n'a été visité</div>
+                                    <div class="project-category text-white-50">le joueur utilise l'esquive</div>
                                 </div>
-                            </a>
-                        </div>
-                        <div class="col-lg-4 col-sm-6"></div>
-                        <div class="col-lg-4 col-sm-6">
-                                <img class="img-fluid" src="\assets\img/projet_tut2.png" alt="carte présentant un marqueur vert, qui a été visité, et un marqueur rouge" />
-                                <div class="portfolio-box-caption">
-                                    <div class="project-category text-white-50">Un point a été visité</div>
-                                </div>
-                            </a>
             </div>
         </section>
         <!-- Contact-->
